[metadata]
name = lcdb
version = attr: lcdb.__version__
url = https://github.com/fmohr/lcdb
project_urls =
    Documentation = https://github.com/fmohr/lcdb
    Changes = https://github.com/fmohr/lcdb/releases
    Source Code = https://github.com/fmohr/lcdb
    Issue Tracker = https://github.com/fmohr/lcdb/issues
    Discussion = https://github.com/fmohr/lcdb/discussions
license = BSD 3-clause
license_files = LICENSE.md
author =  Felix Mohr <mail@felixmohr.de>, Romain Egele <romainegele@gmail.com>
maintainer = Felix Mohr
maintainer_email = mail@felixmohr.de
description = Learning curve database
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = true
python_requires = >=3.7

[options.packages.find]
exclude =
    config
    experiments
    install
    tests

[options.entry_points]
console_scripts =
    lcdb = lcdb.cli._cli:main